Add Java 8 compatibility